Report empty article as empty.

Dom Distiller adds "No data found" to the HTML if the page is empty.
This prevents RL to handle correctly the error.

BUG=648923

Review-Url: https://codereview.chromium.org/2594663005
Cr-Commit-Position: refs/heads/master@{#440391}

Former-commit-id: 4af6f965f87724fcfc7b7e2b900522edf57a5212